# aurral

./: .dockerignore  .gitignore  .prettierignore  .releaserc.json  AURRAL_STYLE_GUIDE.md  BACKEND_STATUS_REPORT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LIDARR_INTEGRATION_STATUS.md  MIGRATION_PLAN.md  PHASE1_PROGRESS.md  PHASE2_ARCHITECTURE.md  PHASE2_DOCKER_SETUP.md  PHASE2_SOULSEEK_ARCHITECTURE.md  PHASE2_TESTING.md  README.md  V2.md  ai-security-audit.md  aurral_metadata_provider.md  commitlint.config.js  community-guide.md  community-playlist.md  csvjson.json  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.yml  flows-and-playlists.md  loadEnv.js  package-lock.json  package.json  release.config.cjs  server.js  start.sh  tsconfig.json  wait-for-backend.sh
.githooks/: pre-commit
backend/native/aurral-worker/: Cargo.toml
backend/native/aurral-worker/src/: daemon.rs  lib.rs  main.rs  types.rs
backend/native/aurral-worker/src/discovery/: global_top.rs  image_hydrate.rs  mod.rs  pool.rs  scoring.rs  seeds.rs  similarity.rs  tag_harvest.rs
backend/native/aurral-worker/src/flow/: candidate.rs  focus.rs  harvest.rs  mix.rs  mod.rs  plan.rs  release_radar.rs  targets.rs  track.rs
backend/native/aurral-worker/src/jobs/: discovery_enrich.rs  discovery_pipeline.rs  discovery_prep.rs  discovery_refresh.rs  discovery_run.rs  flow_plan.rs  mod.rs  playlist_plan.rs  slskd_matcher.rs
backend/native/aurral-worker/src/net/: lastfm.rs  lidarr.rs  metadata.rs  mod.rs
backend/native/aurral-worker/src/prep/: library_mix.rs  mod.rs  release_radar.rs
(+900 files in other folders)
